Fixed findbugs errors
svn path=/trunk/; revision=45786


Former-commit-id: e5548d6810a18f9be4aaa2a6b9e71ecf0da4157a